# LearnEverytime

./: README.md
A_start_costmap/: AStar.cpp  AStar.h  Check.cpp  Check.h  PATH.h  Trans.cpp  Trans.h  main_two.cpp
A_start_costmap/ProProcess/: A_star.py  accessibility.py  connected_domains.py  connectivity.py  get_barr.py  save_tif.py  skeleton.py  swelling_and_corrosion.py
FacialRecognition/: 01_face_dataset.py  03_face_recognition.py  Ctrl_MySQL.py  temperature.py
Kaggle/: readme.txt
Kaggle/classification/: AdaBoost_submission.csv  LR_submission.csv  RFC_submission.csv  SVC_submission.csv  calculate.py  mlp_submission.csv  stacked_submission.csv  xgboost_submission.csv
Kaggle/clean/: data_clean.py  test.csv  train.csv
Learn_ROS2/comm/: CMakeLists.txt  package.xml
Learn_ROS2/comm/include/comm/: learn_server.h  listen_odom_topic.h
Learn_ROS2/comm/launch/: listen_odom.py
Learn_ROS2/comm/src/: learn_cilent.cpp  learn_server.cpp  listen_odom_topic.cpp
Learn_ROS2/interface_learn/: CMakeLists.txt  package.xml
Learn_ROS2/simulat/: CMakeLists.txt  package.xml
WTA/: Firepower_Distribution.py  WithGA.py  main.py
path_planning/: GA_planning.py  Geometric_gradient.py  PSO_Planning.py  UI.py  UI_draw.py  draw.py  path_Thread.py
path_planning/UI/: main.ui  setting.ui
work_path_planning/: readme.txt
work_path_planning/Transform_XY_GPS/: Transform.cpp  Transform.hpp  main.cpp
work_path_planning/Use_with_databases/: divide_grid.py
work_path_planning/draw/: draw_slope.py  solpe.py
work_path_planning/global_planning/: Voronoi_map.py  barrier.py  barrier_piont.py  test.py  trans_pgrouting.py  unevenness.py
work_path_planning/java_use_Cplus/: inter.h  main  main.cpp  test.cpp  test.java
work_path_planning/path_people/: A_star.py  Ant_colony.py  coordinate_transformations.py  pro_treatment.py  splicing.py  test_barr.py  trans_relatively.py
work_path_planning/pro_treatment/: pro_treatment.py
work_path_planning/test/: outliers_pro.py  pro_treatment.py  resample_pro.py  test.py  undersample_pro.py
(+47 files in other folders)
